[gd_scene load_steps=3 format=3 uid="uid://dr7l7fvteq1nf"]

[ext_resource type="Script" path="res://scripts/kill_zone.gd" id="1_17flc"]
[ext_resource type="AudioStream" uid="uid://wteibjiq415y" path="res://assets/sounds/hurt.wav" id="2_jv43q"]

[node name="KillZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_17flc")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="dead_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jv43q")
bus = &"SFX"

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
